src/assets/sqv.css
.root{
  font-family: monospace, monospace;
}

.container {
  margin-left: 0;
}

.cnk {
  position: relative;
  white-space: nowrap;
  display: inline-block;
  vertical-align: top;
  margin-bottom: 10px;
}
.idx {
  position: relative;
  display: inline-block;
  vertical-align: top;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}

.hidden {
  display: none;
}

.lblContainer {
  margin-right: 10px;
  direction: rtl;
}

.lbl-hidden {
  padding-left: 2px;
  padding-right: 5px;
  -webkit-user-select: none;
  display:block;
  height:1em;
  margin-bottom: 1.5em;
  font-style: italic;
  justify-content: flex-end;
  flex-direction: column;
  margin-left: 10px;
}

.lbl {
  font-size: 0.6em;
}

.cell{
  margin-bottom: 1.5em;
  height: 1em;
  display: inline-block;
}

.highlight {
  background-color: #EBD270!important;;
}

/* 'card' name is not available because used by bootstrap */
.crd {
  position: relative;
  display: inline-block;
}

.crds {
  display: inline-block;
  -webkit-user-select: none;
}

.tooltipText {
  visibility: hidden;
  position: absolute;
  z-index: 1;
}

.lbl:hover .tooltipText {
  visibility: visible;
}

